# realtime-amazon-data-pipeline

./: .env  README.md  combine_for_powerbi.py  docker-compose.yml  main.py  pyproject.toml
airflow/dags/: pipeline_dag.py
data_generator/: generate_orders.py
kafka/: consumer.py
postgres/init/: schema.sql
power_bi_exports/: customer_summary.csv  daily_sales.csv  ecommerce_dashboard.xlsx  orders_full.csv  revenue_by_category.csv
